--- a/templates/index.html
+++ b/templates/index.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
  
-<head>
-    <title>Book Search</title>
- 
- 
+    <head> 
+        
+        <title>Readitate</title> <br>
+    </head>
+        <body background="img/booksehelf1.jpg">
+           
+            <ul><b> Readitate </b></ul>
+                <li><a href="/index">Home</a></li>
+                <li><a href="/about">About Us</a></li>
+                <li><a href="/how">How It Works</a></li>
 
- 
- 
-</head>
- 
-<body>
- 
-        <form action="/query" method="post">
-            <input name="emotion" type="text"/>
-            <input type="submit">
+            
+            <br> <br>
+             <link href="/static/main.css" rel="stylesheet"/>
+                   <h1 align="center">How are you feeling?</h1>
+                         
+        <form action="/query" method="post" align="center">
+            <input name="emotion" type="text" id="searchbar"/>
+             <input type="image" src="http://icons.iconarchive.com/icons/elegantthemes/beautiful-flat-one-color/128/magnifying-glass-icon.png" alt="Search" width="50" id="imgbutton" height="50">
+
         </form>
-
 </body>
  
 </html>
