--- a/templates/results.html
+++ b/templates/results.html
@@ -17,7 +17,7 @@
     
         <br> <br>
       {% for value in books %}
-      <div class="container" style="padding: 5px; background-color: lightgrey ; border-radius:25px;">
+      <div class="container" style="width: 60%; padding: 5px; background-color: lightgrey ; border-radius:25px;">
         <div class="col-md-8">
         <h1>{{value.title}}</h1>
         <h2>{{value.author}} </h2>
