--- a/templates/results.html
+++ b/templates/results.html
@@ -16,20 +16,22 @@
     
     
         <br> <br>
+
+      <div class="container" style="width: 60%; padding: 5px; background-color: lightgrey ; border-radius:25px; margin: auto;">
       {% for value in books %}
-      <div class="container" style="width: 60%; padding: 5px; background-color: lightgrey ; border-radius:25px;">
-        <div class="col-md-8">
-        <h1>{{value.title}}</h1>
-        <h2>{{value.author}} </h2>
-        </div>
-      <div class="col-md-4.row">
+        <div class="row"
+          <div class="col-md-8">
+            <h1>{{value.title}}</h1>
+            <h2>{{value.author}} </h2>
+          </div>
+          <div class="col-md-4">
             {% if value.cover_i == 0 %}
                 <img width=100% src="https://www.discovermeteor.com/images/book.svg"> 
             {% else %}
                 <img width=100% src = "https://covers.openlibrary.org/l/id/{{value.cover_i}}-M.jpg">
             {% endif %}
-      </div>
-
+          </div>
+        </div>
       {% endfor %}
       </div>
         
