--- a/templates/results.html
+++ b/templates/results.html
@@ -21,7 +21,7 @@
       {% for value in books %}
         <div class="row">
           <div class="col-md-8">
-            <h1>{{value.title}}</h1>
+            <p>{{value.title}}</p>
             <h2>{{value.author}} </h2>
           </div>
           <div class="col-md-4">
