--- a/templates/results.html
+++ b/templates/results.html
@@ -20,17 +20,17 @@
       <div class="container" style="width: 60%; padding: 5px; background-color: lightgrey ; border-radius:25px; margin: auto;">
       {% for value in books %}
         <div class="row">
-          <div class="col-md-8">
-            <p>{{value.title}}</p>
-            <h2>{{value.author}} </h2>
-          </div>
-          <div class="col-md-4">
-            {% if value.cover_i == 0 %}
-                <img width=100% src="https://www.discovermeteor.com/images/book.svg"> 
-            {% else %}
-                <img class="stockimage" width=100% src = "https://covers.openlibrary.org/l/id/{{value.cover_i}}-M.jpg">
-            {% endif %}
-          </div>
+            <div class="col-md-8">
+              <p>{{value.title}}<br>
+              {{value.author}} </p>
+            </div>
+            <div class="col-md-4">
+              {% if value.cover_i == 0 %}
+                  <img width=100% src="https://www.discovermeteor.com/images/book.svg"> 
+              {% else %}
+                  <img class="stockimage" width=100% src = "https://covers.openlibrary.org/l/id/{{value.cover_i}}-M.jpg">
+              {% endif %}
+            </div>
         </div>
       {% endfor %}
       </div>
