--- a/templates/results.html
+++ b/templates/results.html
@@ -17,18 +17,18 @@
     
         <br> <br>
 
-      <div class="container" style="width: 60%; padding: 5px; background-color: lightgrey ; border-radius:25px; margin: auto;">
+      <div class="container" style="width: 40%; padding: 5px; background-color: lightgrey ; border-radius:25px; margin: auto;">
       {% for value in books %}
         <div class="row">
             <div class="col-md-8">
-              <p>{{value.title}}<br>
+              <p><strong>{{value.title}}</strong><br>
               {{value.author}} </p>
             </div>
             <div class="col-md-4">
               {% if value.cover_i == 0 %}
-                  <img width=100% src="https://www.discovermeteor.com/images/book.svg"> 
+                  <img width=100% style="display:block, margin:auto" src="https://www.discovermeteor.com/images/book.svg"> 
               {% else %}
-                  <img class="stockimage" width=100% src = "https://covers.openlibrary.org/l/id/{{value.cover_i}}-M.jpg">
+                  <img class="stockimage" style="display:block, margin:auto" width=100% src = "https://covers.openlibrary.org/l/id/{{value.cover_i}}-M.jpg">
               {% endif %}
             </div>
         </div>
