--- a/static/main.css
+++ b/static/main.css
@@ -45,6 +45,7 @@ th {
 p {
     font-size: 22px;
     line-height: 2;
+    text-align: center;
 }
 
 ul {
@@ -59,6 +60,8 @@ ul {
 
 img {
     width: 250px;
+    display: block;
+    margin: auto;
 }
 
 form {
