--- a/templates/results.html
+++ b/templates/results.html
@@ -21,7 +21,7 @@
       {% for value in books %}
         <div class="row">
             <div class="col-md-8">
-              <p><strong>{{value.title}}</strong><br>
+              <p style="text-align: center"><strong>{{value.title}}</strong><br>
               {{value.author}} </p>
             </div>
             <div class="col-md-4">
