--- a/static/main.css
+++ b/static/main.css
@@ -46,6 +46,7 @@ p {
     font-size: 22px;
     line-height: 2;
     text-align: center;
+}
 
 ul {
     float: left;
@@ -61,7 +62,7 @@ img {
     width: 250px;
     display: block;
     margin: auto;
-    height: 250px;
+}
 
 form {
     height: 40px
